envoy/envoy.yaml
---
admin:
  profile_path: /tmp/envoy.prof
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901

static_resources:
  listeners:
  # grpc-service-rs loadbalanced instance
  - name: example_time_service_listener
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 10200
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          access_log:
          - name: envoy.access_loggers.stdout
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                  grpc: {}
                route:
                  cluster: example_time_service_cluster
  # grpcweb
  - name: example_time_service_listener_grpcweb
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 10201
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          access_log:
          - name: envoy.access_loggers.stdout
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
          http_filters:
            # - name: envoy.grpc_web
            #   typed_config:
            #     "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_web.v3.GrpcWeb

            # - name: envoy.filters.http.grpc_json_transcoder
            #   typed_config:
            #     "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_json_transcoder.v3.GrpcJsonTranscoder
            #     proto_descriptor: "/time_service.binpb"
            #     services: ["github.canardleteer.grpc_service_rs.v1alpha1.SimpleTimestampService"]
            #     print_options:
            #       add_whitespace: true
            #       always_print_primitive_fields: true
            #       always_print_enums_as_ints: false
            #       preserve_proto_field_names: false
            - name: envoy.filters.http.router
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: example_time_service_cluster

  clusters:
  - name: example_time_service_cluster
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    dns_lookup_family: V4_ONLY
    http2_protocol_options: {}
    load_assignment:
      cluster_name: example_time_service_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: example-time-service-1
                port_value: 20201
        - endpoint:
            address:
              socket_address:
                address: example-time-service-2
                port_value: 20202
